--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
                 // $("<div><p>내부추가</p></div>").appendTo(this);
                 //$(타겟).append("타겟 내부 Next 다음에 추가할 내용");
                 $(this).append("<div><p>내부추가</p></div>");
-                //$(타겟).append("타겟 외부 Next 다음에 추가할 내용");
+                //$(타겟).append("타겟 외부 Next 다음에 추가할 내용");123
                 $(this).after("<div><p>외부추가</p></div>")
                 var count = $("div").length;
                 alert("div태그의 개수는" + count + "개 입니다.");
